# cookiecutter-poetry

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .bumpversion.cfg  .dockerignore  .flake8  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/docker/: Dockerfile  docker-entrypoint.sh
